--- a/android/app/src/main/res/layout/fragment_record_board.xml
+++ b/android/app/src/main/res/layout/fragment_record_board.xml
@@ -33,7 +33,6 @@
                     app:layout_constraintTop_toTopOf="parent"
                     android:paddingHorizontal="10dp"
                     android:orientation="horizontal">
-
                     <RadioButton
                         android:id="@+id/allButton"
                         android:layout_width="20dp"
@@ -48,6 +47,7 @@
                         android:onClick="onRadioButtonClicked"
                         android:text="전체"
                         android:textAlignment="center"
+                        android:textAppearance="@style/radio_btn"
                         android:textColor="@drawable/text_color" />
 
                     <RadioButton
@@ -63,6 +63,7 @@
                         android:onClick="onRadioButtonClicked"
                         android:text="게시판"
                         android:textAlignment="center"
+                        android:textAppearance="@style/radio_btn"
                         android:textColor="@drawable/text_color" />
 
                     <RadioButton
@@ -78,6 +79,7 @@
                         android:onClick="onRadioButtonClicked"
                         android:text="백문백답"
                         android:textAlignment="center"
+                        android:textAppearance="@style/radio_btn"
                         android:textColor="@drawable/text_color" />
 
                     <RadioButton
@@ -93,22 +95,16 @@
                         android:onClick="onRadioButtonClicked"
                         android:text="오늘의 편지"
                         android:textAlignment="center"
+                        android:textAppearance="@style/radio_btn"
                         android:textColor="@drawable/text_color" />
-
                 </RadioGroup>
-
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <!--    조건을 넣어서 , 어떤걸 보여줄지 정하는 느낌?-->
-
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/board_recyclerview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:listitem="@layout/board_item" />
-
         </LinearLayout>
-
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/board_fab"
             android:layout_width="wrap_content"
@@ -118,8 +114,5 @@
             android:layout_marginBottom="20dp"
             app:srcCompat="@drawable/ic_baseline_add_24"
             app:tint="@color/white"/>
-
-
-
     </FrameLayout>
 </layout>
