--- a/android/app/src/main/res/layout/fragment_record_letter_detail.xml
+++ b/android/app/src/main/res/layout/fragment_record_letter_detail.xml
@@ -82,6 +82,6 @@
             android:id="@+id/letterContentDetail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textColor="@color/black"></TextView>
+            android:textColor="@color/black" />
     </LinearLayout>
 </LinearLayout>
