--- a/android/app/src/main/res/layout/comment_item.xml
+++ b/android/app/src/main/res/layout/comment_item.xml
@@ -15,7 +15,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:paddingTop="8dp"
-        android:paddingBottom="6dp">
+        android:paddingBottom="6dp"
+        android:paddingHorizontal="10dp">
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/commentProfileImage"
             android:layout_width="40dp"
@@ -27,18 +28,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/commentContainer"
             app:shapeAppearanceOverlay="@style/circleImageView" />
-
-        <!--<com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/commentProfileImage"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@color/darkgray"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/commentContanier"
-            app:layout_constraintTop_toTopOf="@id/commentContanier"
-            app:shapeAppearanceOverlay="@style/circleImageView" />-->
         <TextView
             android:id="@+id/commentUserNickname"
             android:layout_width="wrap_content"
