--- a/android/app/src/main/res/layout/fragment_home.xml
+++ b/android/app/src/main/res/layout/fragment_home.xml
@@ -2,26 +2,21 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-
     <data>
-
         <variable
             name="viewmodel"
             type="com.ssafy.zip.android.viewmodel.HomeViewModel" />
     </data>
-
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true">
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/home_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:overScrollMode="always"
             tools:context=".HomeFragment">
-
             <ImageView
                 android:id="@+id/topLogo"
                 android:layout_width="60dp"
@@ -31,8 +26,7 @@
                 android:src="@drawable/zip"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"></ImageView>
-
+                app:layout_constraintEnd_toEndOf="parent" />
             <TextView
                 android:id="@+id/familyName"
                 android:layout_width="match_parent"
@@ -42,21 +36,14 @@
                 android:gravity="center_horizontal"
                 android:text="@{viewmodel.familyData.familyName}"
                 android:textSize="21dp"
+                android:textColor="@color/darkgray2"
                 app:layout_constraintTop_toBottomOf="@id/topLogo" />
-
-
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/home_house"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:background="@drawable/house"
                 app:layout_constraintTop_toBottomOf="@+id/familyName">
-                <!--<androidx.constraintlayout.widget.Guideline
-                    android:id="@+id/guideline"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    app:layout_constraintGuide_percent="0.65"/>-->
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/family_code_copy_container"
                     android:layout_width="wrap_content"
@@ -121,7 +108,6 @@
                         android:padding="2dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/family_code_copy_container">
-
                         <TextView
                             android:id="@+id/text2"
                             android:layout_width="wrap_content"
@@ -134,9 +120,7 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent">
-
                         </TextView>
-
                         <TextView
                             android:id="@+id/family_point"
                             android:layout_width="wrap_content"
@@ -149,8 +133,7 @@
                             app:layout_constraintEnd_toStartOf="@+id/mission_point"
                             app:layout_constraintStart_toEndOf="@id/text2"
                             app:layout_constraintTop_toTopOf="parent"
-                            tools:text="@tools:sample/cities"></TextView>
-
+                            tools:text="@tools:sample/cities" />
                         <ImageView
                             android:id="@+id/mission_point"
                             android:layout_width="15dp"
@@ -178,7 +161,6 @@
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintTop_toBottomOf="@id/home_house" />
-
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/home_recycler_view"
                 android:layout_width="match_parent"
@@ -189,14 +171,12 @@
                 app:layoutManager="GridLayoutManager"
                 app:layout_constraintTop_toBottomOf="@id/familyMember"
                 tools:listitem="@layout/home_item" />
-
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/mission_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 app:layout_constraintTop_toBottomOf="@id/home_recycler_view">
-
                 <FrameLayout
                     android:id="@+id/home_mission"
                     android:layout_width="match_parent"
@@ -209,8 +189,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"></FrameLayout>
-
+                    app:layout_constraintTop_toTopOf="parent" />
                 <TextView
                     android:id="@+id/mission_top"
                     android:layout_width="match_parent"
@@ -226,8 +205,7 @@
                     app:layout_constraintBottom_toTopOf="@id/mission1"
                     app:layout_constraintEnd_toEndOf="@id/home_mission"
                     app:layout_constraintStart_toStartOf="@id/home_mission"
-                    app:layout_constraintTop_toTopOf="@+id/home_mission"></TextView>
-
+                    app:layout_constraintTop_toTopOf="@+id/home_mission" />
                 <FrameLayout
                     android:id="@+id/mission1"
                     android:layout_width="match_parent"
@@ -240,8 +218,7 @@
                     app:layout_constraintEnd_toEndOf="@id/home_mission"
                     app:layout_constraintStart_toStartOf="@id/home_mission"
                     app:layout_constraintTop_toBottomOf="@id/mission_top"
-                    app:layout_constraintVertical_weight="1"></FrameLayout>
-
+                    app:layout_constraintVertical_weight="1" />
                 <ImageView
                     android:id="@+id/mission1_point"
                     android:layout_width="50dp"
@@ -253,8 +230,7 @@
                     app:layout_constraintBottom_toBottomOf="@id/mission1"
                     app:layout_constraintEnd_toStartOf="@id/mission1_content"
                     app:layout_constraintStart_toStartOf="@id/mission1"
-                    app:layout_constraintTop_toTopOf="@id/mission1"></ImageView>
-
+                    app:layout_constraintTop_toTopOf="@id/mission1" />
                 <TextView
                     android:id="@+id/mission1_title"
                     android:layout_width="0dp"
@@ -271,8 +247,7 @@
                     app:layout_constraintEnd_toStartOf="@id/mission1_btn"
                     app:layout_constraintStart_toEndOf="@id/mission1_point"
                     app:layout_constraintTop_toTopOf="@id/mission1"
-                    app:layout_constraintVertical_chainStyle="packed"></TextView>
-
+                    app:layout_constraintVertical_chainStyle="packed" />
                 <TextView
                     android:id="@+id/mission1_btn"
                     android:layout_width="0dp"
@@ -287,8 +262,7 @@
                     android:textSize="12dp"
                     app:layout_constraintBottom_toTopOf="@id/mission1_content"
                     app:layout_constraintEnd_toEndOf="@id/mission1"
-                    app:layout_constraintTop_toTopOf="@id/mission1"></TextView>
-
+                    app:layout_constraintTop_toTopOf="@id/mission1" />
                 <TextView
                     android:id="@+id/mission1_content"
                     android:layout_width="0dp"
@@ -303,8 +277,7 @@
                     app:layout_constraintBottom_toTopOf="@+id/mission1_progress"
                     app:layout_constraintEnd_toEndOf="@id/mission1"
                     app:layout_constraintStart_toEndOf="@id/mission1_point"
-                    app:layout_constraintTop_toBottomOf="@id/mission1_title"></TextView>
-
+                    app:layout_constraintTop_toBottomOf="@id/mission1_title" />
                 <ProgressBar
                     android:id="@+id/mission1_progress"
                     style="?android:attr/progressBarStyleHorizontal"
@@ -319,8 +292,7 @@
                     app:layout_constraintBottom_toBottomOf="@id/mission1"
                     app:layout_constraintEnd_toEndOf="@id/mission1"
                     app:layout_constraintStart_toEndOf="@id/mission1_point"
-                    app:layout_constraintTop_toBottomOf="@id/mission1_content"></ProgressBar>
-
+                    app:layout_constraintTop_toBottomOf="@id/mission1_content" />
                 <FrameLayout
                     android:id="@+id/mission2"
                     android:layout_width="match_parent"
@@ -331,8 +303,7 @@
                     android:elevation="10dp"
                     app:layout_constraintBottom_toBottomOf="@id/home_mission"
                     app:layout_constraintTop_toBottomOf="@id/mission1"
-                    app:layout_constraintVertical_weight="1"></FrameLayout>
-
+                    app:layout_constraintVertical_weight="1" />
                 <ImageView
                     android:id="@+id/mission2_point"
                     android:layout_width="50dp"
@@ -343,8 +314,7 @@
                     android:src="@drawable/point"
                     app:layout_constraintBottom_toBottomOf="@id/mission2"
                     app:layout_constraintStart_toStartOf="@id/mission2"
-                    app:layout_constraintTop_toTopOf="@id/mission2"></ImageView>
-
+                    app:layout_constraintTop_toTopOf="@id/mission2" />
                 <TextView
                     android:id="@+id/mission2_title"
                     android:layout_width="0dp"
@@ -360,8 +330,7 @@
                     app:layout_constraintEnd_toStartOf="@id/mission2_btn"
                     app:layout_constraintStart_toEndOf="@id/mission2_point"
                     app:layout_constraintTop_toTopOf="@id/mission2"
-                    app:layout_constraintVertical_chainStyle="packed"></TextView>
-
+                    app:layout_constraintVertical_chainStyle="packed" />
                 <TextView
                     android:id="@+id/mission2_btn"
                     android:layout_width="0dp"
@@ -376,8 +345,7 @@
                     android:textSize="12dp"
                     app:layout_constraintBottom_toTopOf="@id/mission2_content"
                     app:layout_constraintEnd_toEndOf="@id/mission2"
-                    app:layout_constraintTop_toTopOf="@id/mission2"></TextView>
-
+                    app:layout_constraintTop_toTopOf="@id/mission2" />
                 <TextView
                     android:id="@+id/mission2_content"
                     android:layout_width="0dp"
@@ -392,8 +360,7 @@
                     app:layout_constraintBottom_toTopOf="@id/mission2_progress"
                     app:layout_constraintEnd_toEndOf="@id/mission2"
                     app:layout_constraintStart_toEndOf="@id/mission2_point"
-                    app:layout_constraintTop_toBottomOf="@id/mission2_title"></TextView>
-
+                    app:layout_constraintTop_toBottomOf="@id/mission2_title" />
                 <ProgressBar
                     android:id="@+id/mission2_progress"
                     style="?android:attr/progressBarStyleHorizontal"
@@ -408,9 +375,8 @@
                     app:layout_constraintBottom_toBottomOf="@id/mission2"
                     app:layout_constraintEnd_toEndOf="@id/mission2"
                     app:layout_constraintStart_toEndOf="@id/mission2_point"
-                    app:layout_constraintTop_toBottomOf="@id/mission2_content"></ProgressBar>
+                    app:layout_constraintTop_toBottomOf="@id/mission2_content" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/mission_container_familyzero"
                 android:layout_width="match_parent"
@@ -418,7 +384,6 @@
                 android:orientation="vertical"
                 android:visibility="gone"
                 app:layout_constraintTop_toBottomOf="@id/home_recycler_view">
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -427,12 +392,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
-
                 </TextView>
-
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-
     </androidx.core.widget.NestedScrollView>
 </layout>
