--- a/android/app/src/main/res/layout/home_item.xml
+++ b/android/app/src/main/res/layout/home_item.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="2dp"
         android:fontFamily="@font/one_mobile_pop"
-        android:textColor="@color/black"
+        android:textColor="@color/darkgray2"
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
