--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -68,4 +68,9 @@
         <item name="android:textSize">10sp</item>
         <item name="android:textColor">@color/darkgray</item>
     </style>
+    <style name="CustomHeaderTextAppearance" parent="TextAppearance.MaterialCalendarWidget.Header">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/darkgray2</item>
+        <item name="android:fontFamily">@font/one_mobile_pop</item>
+    </style>
 </resources>
