--- a/android/app/src/main/res/layout/fragment_calendar.xml
+++ b/android/app/src/main/res/layout/fragment_calendar.xml
@@ -21,14 +21,46 @@
             app:mcv_selectionColor="#6200EE" />
         <TextView
             android:id="@+id/day_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="26sp"
             android:layout_marginStart="25dp"
-            android:layout_marginTop="10dp"
             android:textColor="@color/darkgray2"
             android:textSize="15sp"
+            android:fontFamily="@font/one_mobile_pop"
+            android:backgroundTint="@color/purple_500"
             android:layout_below="@id/calendarView"
-            android:fontFamily="@font/one_mobile_pop"/>
+            android:gravity="center"
+            />
+        <Button
+            android:id="@+id/add_calendar_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="26sp"
+            android:text="일정 추가"
+            android:padding="0dp"
+            app:icon="@drawable/ic_round_add_24"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="25dp"
+            android:layout_below="@id/calendarView"
+            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"            android:fontFamily="@font/one_mobile_pop"
+            android:textSize="15sp"
+            android:textColor="@color/darkgray2"
+            app:iconTint="@color/darkgray2"
+            android:gravity="center"
+            />
+        <!--<Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/add_calendar_fab"
+            app:icon="@drawable/ic_round_add_24"
+            android:padding="0dp"
+            android:adjustViewBounds="true"
+            android:scaleType="center"
+            android:layout_below="@id/calendarView"
+            android:layout_alignParentRight="true"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="25dp"
+            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
+            android:text="일정 추가"/>-->
         <TextView
             android:id="@+id/endLayout"
             android:layout_width="match_parent"
@@ -39,8 +71,10 @@
             android:background="@drawable/layout_bottom"
             android:textColor="@color/black"
             android:layout_below="@id/day_text"
-            tools:ignore="DuplicateIds" />
+            tools:ignore="DuplicateIds"
+            />
         <androidx.core.widget.NestedScrollView
+            android:id="@+id/calendar_scrollview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fillViewport="true"
@@ -57,7 +91,7 @@
                     tools:listitem="@layout/calendar_item" />
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
+        <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/add_calendar_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -67,6 +101,6 @@
             app:srcCompat="@drawable/ic_baseline_add_24"
             app:tint="@color/white"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"/>
+            android:layout_alignParentRight="true"/>-->
     </RelativeLayout>
 </layout>
