FE_221120_fix : 로그아웃 위치 변경
Former-commit-id: 0acc0d6876dde553679391decb71a292d2f1d41f

--- a/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
+++ b/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
@@ -239,6 +239,8 @@
     </fragment>
     <action
         android:id="@+id/action_to_modify" app:destination="@id/modifyFragment"/>
+    <action
+        android:id="@+id/action_to_login" app:destination="@id/loginFragment"/>
     <fragment
         android:id="@+id/startFragment"
         android:name="com.ssafy.zip.android.StartFragment"
