--- a/android/app/src/main/res/layout/fragment_profile_dialog.xml
+++ b/android/app/src/main/res/layout/fragment_profile_dialog.xml
@@ -25,6 +25,19 @@
         android:drawableEnd="@drawable/ic_outline_edit_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:text="로그아웃"
+        android:textSize="12sp"
+        android:textColor="@drawable/selector_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/edit_btn"
+        app:layout_constraintBottom_toBottomOf="@id/edit_btn">
+    </TextView>
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/dialog_image"
